<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.compubase.mhmd.digitalatlas.SignIn"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:background="#00bfff"
        android:theme="?attr/actionBarTheme">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Signin"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/mainlogo"
            android:contentDescription="@string/logoview" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital_atlas"
                android:textSize="40sp"
                android:textColor="#3366ff"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:inputType="text"
            android:padding="15dp"
            android:hint="@string/username"
            android:background="@drawable/rounded_edittext_focused"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="15dp"
            android:background="@drawable/rounded_edittext_focused"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Signin"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/signin"
            android:layout_marginTop="30dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button2"
            android:text="@string/don_t_have_account_create_one"
            android:layout_margin="5dp"
            android:id="@+id/creat"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:background="@drawable/rounded_button2"
            android:layout_margin="20dp"
            android:id="@+id/forgetpass"/>
    </LinearLayout>

</LinearLayout>
